--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.liumapp.DNSQueen</groupId>
+  <groupId>com.liumapp</groupId>
   <artifactId>DNSQueen</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>DNSQueen</name>
-  <url>http://maven.apache.org</url>
+  <url>http://www.liumapp.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -49,7 +49,6 @@
     </dependency>
   </dependencies>
 
-
   <build>
     <plugins>
       <plugin>
@@ -88,7 +87,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>./</classpathPrefix>
-              <mainClass>us.codecraft.wifesays.wife.Console</mainClass>
+              <mainClass>com.liumapp.DNSQueen.queen.Console</mainClass>
             </manifest>
           </archive>
         </configuration>
