--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,11 @@
       <url>http://www.liumapp.com</url>
       <email>liumapp.com@gmail.com</email>
     </developer>
+    <developer>
+      <name>suyu</name>
+      <url>http://blog.csdn.net/qq_38082304?ref=toolbar</url>
+      <email>nzlsgg@163.com</email>
+    </developer>
   </developers>
 
   <scm>
