--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.liumapp</groupId>
   <artifactId>DNSQueen</artifactId>
-  <version>1.2.6</version>
+  <version>1.2.7</version>
   <packaging>jar</packaging>
 
   <name>DNSQueen</name>
@@ -163,7 +163,7 @@
     </developer>
     <developer>
       <name>suyu</name>
-      <url>http://blog.csdn.net/qq_38082304?ref=toolbar</url>
+      <url>http://blog.csdn.net/qq_38082304</url>
       <email>nzlsgg@163.com</email>
     </developer>
   </developers>
