--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
     <developer>
       <name>suyu</name>
       <url>http://blog.csdn.net/qq_38082304</url>
-      <email>nzlsgg@163.com</email>
+      <email>1132263176@qq.com</email>
     </developer>
   </developers>
 
